# widget-draughts

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
deb/: wxdraughts_1.0.3_amd64.deb
deb-packages/: wxdraughts_1.0.3_amd64.deb  wxdraughts_1.0.3_amd64.md5  wxdraughts_1.0.3_armhf.deb  wxdraughts_1.0.3_armhf.md5  wxdraughts_1.1.0_amd64.deb  wxdraughts_1.1.0_amd64.md5  wxdraughts_1.1.0_armhf.deb  wxdraughts_1.1.0_armhf.md5
src/: CMakeLists.txt  board.cpp  draughts.cpp  draughts.h  mainwindow.cpp  mainwindow.h  movepiece.cpp  movepiece.h
yaml/: snapcraft.yaml
